@@ -1,5 +1,14 @@
 2001-11-19  Martin Weber  <martweb@gmx.net>
 
+	* fit.c (filter): added initialisation of prev_new_point.
+
+	* color.h (COLOR_EQUAL): fixed a bug in the COLOR_EQUAL macro
+
+	* pxl-outline.c (find_outline_pixels): corrected outline
+	generation with a given background color.
+
+2001-11-19  Martin Weber  <martweb@gmx.net>
+
 	* fit.c (filter): Temporary solution for not 
 	totally collapsing a curve with repeated filtering.
 
